# my-game-list-backend

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  MANIFEST.in  Makefile  README.md  codecov.yml  justfile  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.bruno/: bruno.json
.bruno/Collections/Collection/: Create Collection.bru  Delete Collection.bru  Get Collection.bru  List Collections.bru  Partial Update Collection.bru  Update Collection.bru
.bruno/Collections/Collection Item/: Create Collection Item.bru  Delete Collection Item.bru  Get Collection Item.bru  List Collection Items.bru  Partial Update Collection Item.bru  Update Collection Item.bru
.bruno/Custom/: Version.bru
.bruno/External Imports/: Steam get games.bru  folder.bru
.bruno/Friendship/friendship/: Friendship details.bru  Friendship list.bru  Remove friendship.bru
.bruno/Friendship/friendship-request/: Accept Friendship-request.bru  Create Friendship-request.bru  Delete Friendship-request.bru  Detail Friendship-request.bru  Get Friendship-requests.bru  Reject Friendship-request.bru
.bruno/Game/company/: Get Companies.bru  Get Company.bru
.bruno/Game/developer/: Create Developer.bru  Delete Developer.bru  Get Developer.bru  Get Developers.bru  Partial Update Developer.bru  Update Developer.bru
.bruno/Game/game/: Create Game.bru  Delete Game.bru  Get Game.bru  Get Games.bru  Partial Update Game.bru  Release Calendar.bru  Update Game.bru
.bruno/Game/game-follow/: Create Game-Follow.bru  Delete Game-Follow.bru  Get Game-Follow.bru  Get Game-Follows.bru  Partial Update Game-Follow.bru  Update Game-Follow.bru
.bruno/Game/game-list/: Bulk create.bru  Create Game-List.bru  Delete Game-List.bru  Export Game-List.bru  Get Game-List.bru  Get Game-Lists.bru  Get Random PTP game.bru  Partial Update Game-List.bru  Update Game-List.bru
.bruno/Game/game-media/: Create Game Media.bru  Delete Game Media.bru  Get Game Media.bru  Get Game Medias.bru  Get all Game Media.bru  Partial Update Game Media.bru  Update Game Media.bru
.bruno/Game/game-review/: Create Game-Review.bru  Delete Game-Review.bru  Get Game-Review.bru  Get Game-Reviews.bru  Partial Update Game-Review.bru  Update Game-Review.bru
.bruno/Game/genre/: Create Genre.bru  Delete Genre.bru  Get Genre.bru  Get Genres.bru  Partial Update Genre.bru  Update Genre.bru
.bruno/Game/import/: Steam.bru  folder.bru
.bruno/Game/platform/: Create Platform.bru  Delete Platform.bru  Get Platform.bru  Get Platforms.bru  Partial Update Platform.bru  Update Platform.bru
.bruno/Game/publisher/: Create Publisher.bru  Delete Publisher.bru  Get Publisher.bru  Get Publishers.bru  Partial Update Publisher.bru  Update Publisher.bru
.bruno/IGDB/Authentication/: Get access token.bru
.bruno/IGDB/Company/: GET Involved Comapny.bru  Get Company.bru
.bruno/Token/: Get Token.bru  Refresh Token.bru
.bruno/User/: Create User.bru  Get Logged In User.bru  Get User.bru  Get Users.bru
.bruno/environments/: Sojusan_GameList.bru
.github/workflows/: build-and-push.yml  my-game-list.yml  trx-agent-scan.yaml
.scannerwork/: report-task.txt
.scratch/business-metrics/: PRD.md
development/: development-data.json
docker/: docker-compose.yml  example.env
docker/app/: Dockerfile  entrypoint.sh  gunicorn.conf.py  settings.py
docker/nginx/: Dockerfile  nginx.conf  proxy.conf
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yml
docker/tempo/: tempo.yaml
my_game_list/: __init__.py
my_game_list/friendships/: admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
my_game_list/games/: __init__.py  admin.py  apps.py  filters.py  mixins.py  models.py  querysets.py  serializers.py  urls.py  views.py
my_game_list/my_game_list/: __init__.py  admin.py  asgi.py  decorators.py  exceptions.py  metrics.py  models.py  permissions.py  prometheus.py  urls.py  validators.py  views.py  wsgi.py
my_game_list/settings/: __init__.py  base.py  devel.py  test.py
my_game_list/users/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
requirements/: requirements-cov.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
scripts/: check_version_and_changelog.py  colors.sh  my-game-list-build.py  my-game-list-manage.py  my-game-list-run-tests-with-pg.sh  my-game-list-run-tests.sh  python_colors.py  wait-for-it.sh  wait-for-postgresql.py
src/my_game_list/: __init__.py
stubs/django_memcached_consul/: memcached.pyi
stubs/django_prometheus/: __init__.pyi  apps.pyi  exports.pyi  middleware.pyi  migrations.pyi  models.pyi  testutils.pyi  urls.pyi  utils.pyi
stubs/django_redis/: __init__.pyi  cache.pyi  exceptions.pyi  hash_ring.pyi  pool.pyi  util.pyi
stubs/docker/: auth.pyi  client.pyi  errors.pyi  tls.pyi
stubs/pip_prometheus/: __init__.pyi
stubs/py/: __init__.pyi  __metainfo.pyi  _builtin.pyi  _error.pyi  _std.pyi  _xmlgen.pyi
stubs/requests_futures/: __init__.pyi  sessions.pyi
stubs/rest_framework_simplejwt/: authentication.pyi  backends.pyi  compat.pyi  exceptions.pyi  models.pyi  serializers.pyi  settings.pyi  state.pyi  tokens.pyi  utils.pyi  views.pyi
stubs/trogon/: __init__.pyi  constants.pyi  detect_run_string.pyi  introspect.pyi  run_command.pyi  trogon.pyi  typer.pyi
tests/: __init__.py  conftest.py
tests/collections/: __init__.py  conftest.py  test_api_collection_types.py  test_api_items_limit.py  test_bulk_reorder.py  test_collection_types.py  test_models.py  test_permissions.py  test_reorder.py  test_update_tiers.py
tests/friendships/: __init__.py  conftest.py
tests/games/: __init__.py  conftest.py  test_game_properties.py  test_models.py  test_signals.py  test_utils.py
tests/my_game_list/: __init__.py  test_schema_contracts.py  test_urls.py  test_views.py
tests/notifications/: __init__.py  test_notifications.py  test_tasks.py
tests/users/: __init__.py  test_middleware.py  test_signals.py  test_users_api.py
uml/: entity_diagram.plantuml  entity_diagram.puml
(+405 files in other folders)
