[project]
name = "my-game-list"
dynamic = ["version"]
description = "My Game List is a web application that allows users to manage their game lists."
readme = "README.md"
authors = [
    { name = "Rafał Grzegorczyk", email = "grzegorczyk1rafal@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]
dependencies = [
    "django==5.2.5",
    "djangorestframework==3.16.1",
    "django-filter==25.1",
    "django-extensions==4.1",
    "django-redis==6.0.0",
    "django-cors-headers==4.7.0",
    "django-rosetta==0.10.2",
    "djangorestframework-simplejwt==5.5.1",
    "PyJWT==2.10.1",
    "celery==5.5.3",
    "django-celery-results==2.6.0",
    "django-celery-beat==2.8.1",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "model-bakery==1.20.5",
    "redis==6.4.0",
    "colorlog==6.9.0",
    "drf-spectacular==0.28.0",
    "pillow==11.3.0",
    "docker==7.1.0",
    "django_prometheus==2.4.1",
    "pip-prometheus==1.2.1",
    "prometheus-client==0.22.1",
    "psutil==7.0.0",
    "PyYAML==6.0.2",
    "setuptools==80.9.0",
    "requests-futures==1.0.2",
    "mypy==1.17.1",
    "django-stubs==5.2.2",
    "django-stubs-ext==5.2.2",
    "djangorestframework-stubs==3.16.2",
    "types-setuptools==80.9.0.20250822",
    "types-psycopg2==2.9.21.20250809",
    "types-requests==2.32.4.20250809",
    "types-docker==7.1.0.20250822",
    "types-psutil==7.0.0.20250822",
    "types-redis==4.6.0.20241004",
    "django_memcached_consul==0.2.0",
    "django-filter-stubs==0.1.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "my_game_list.__version__" }

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "freezegun==1.5.5",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "pytest-sugar==1.1.1",
]
cov = ["pytest-cov==6.2.1"]
tox = ["tox-uv>=1.28.0"]

[tool.uv]
dev-dependencies = [
    "ipython==9.4.0",
    "pre-commit==4.3.0",
    "black==25.1.0",
    "ruff==0.12.11",
]

[project.urls]
Homepage = "https://github.com/SojusanApps/my-game-list-backend"
Repository = "https://github.com/SojusanApps/my-game-list-backend"

[tool.black]
# Compatible with the ruff line length
line-length = 120

[tool.ruff]
line-length = 120
extend-exclude = ["*/migrations/*", "stubs/*"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "F",     # Pyflakes
    "E",
    "W",     # pycodestyle
    "C90",   # mccabe
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "DJ",    # flake8-django
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "ERA",   # eradicate
    "PGH",   # pygrep-hooks
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",   # Pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # Perflint
    "FURB",  # refurb
    "DOC",   # pydoclint
    "RUF",   # Ruff-specific-rules
]
ignore = [
    "D203", # in conflict with D211
    "D212", # in conflict with D213
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR0913"]
"scripts/*" = ["INP001"]
"docker/app/gunicorn.conf.py" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "stubs"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "my_game_list.settings.settings_mypy"

[[tool.mypy.overrides]]
module = "dacite"
implicit_reexport = true
